data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1934.wast
;; 5. **Test Description**:    - **Constraint Checked**: Valid label referencing.    - **Details**: Construct a `br_table` with mixed valid and invalid label references, checking if the out-of-bound labels trigger error detection.    - **Relation to Edge Case**: Validates the robustness of label referencing and error signaling for invalid labels in `wizard_engine`.

(assert_invalid
  (module (func $valid-br_if-nesting
    (block (block (br_if 2 (i32.const 1))))
  ))
  "invalid label index"
)